# rocketry-engineering

./: .gitignore  CLAUDE.md  LICENSE  README.md
avionics/daq-fase1/: README.md  adc_cal.py  bode_analysis.py  fft_analysis.py  gen_thrust_firmware.py  jitter_analysis.py  main.cpp  platformio.ini  plot.py  step_analysis.py  thrust_replay.py
console/: .gitignore  README.md  app.py  requirements.txt  rocketry_mcp.py
console/.streamlit/: config.toml
console/core/: agent_feed.py  artifacts.py  blocks.py  diagrams.py  mcp_tools.py  operation_locks.py  plots.py  provider_probe.py  services.py  store.py  ui.py  wiring_guides.py
console/desktop/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
console/desktop/src-tauri/: Cargo.toml  tauri.conf.json
console/desktop/src-tauri/capabilities/: default.json
console/desktop/src-tauri/src/: lib.rs  main.rs
console/docs/: agent-harness.md  agent-workstation-plan.md  desktop-workstation.md  frontend-redesign.md  technical-audit-2026-07-23.md
console/gateway/: __init__.py  manager.py  models.py  server.py  store.py  usage.py  worktrees.py
console/pages/: 1_Bench.py  2_Wiring.py  3_Motor.py  4_Flight.py  5_History.py  6_Agent.py
console/runners/: om_sweep.py  or_fly.py
console/tests/: __init__.py  test_adapters.py  test_blocks.py  test_gateway_server.py  test_gateway_store.py  test_mcp_tools.py  test_pages.py  test_plots.py  test_provider_adapters.py  test_store.py  (+6 more)
docs/: 01-internal-ballistics.md  02-flight-simulation.md  03-propellant-and-test.md  04-avionics-daq.md  05-open-source.md
(+67 files in other folders)
