[package]
name = "rocketry-workstation"
version = "0.1.0"
description = "Local Rocketry agent and engineering workstation"
authors = ["Rocketry Console"]
edition = "2021"

[lib]
name = "rocketry_workstation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }
